# ros2_smc_ws

./: .gitignore
src/formation_containment_control/: CMakeLists.txt  README.md  package.xml  setup.py
src/formation_containment_control/config/: formation_params.yaml  leader_offsets.yaml  manual_offsets_params.yaml  rviz_config.rviz
src/formation_containment_control/formation_containment_control/: __init__.py
src/formation_containment_control/formation_containment_control/controllers/: __init__.py  formation_controller.py  sgasmc.py
src/formation_containment_control/formation_containment_control/utils/: __init__.py  math_utils.py
src/formation_containment_control/launch/: crazyswarm2.launch.py  manual_offsets.launch.py  simulation.launch.py
src/formation_containment_control/msg/: AgentState.msg  ControllerState.msg  FormationState.msg
src/formation_containment_control/scripts/: crazyswarm_bridge_node.py  formation_containment_node.py  simulation_node.py  standalone_demo.py  virtual_leader_node.py  visualization_node.py
src/formation_containment_control/srv/: SetFormation.srv
src/formation_containment_control/test/: test_controllers.py  test_convex_hull.py  test_graph_theory.py
src/mav_formation_control/: CMakeLists.txt  README.md  package.xml  workspace_description.tex
src/mav_formation_control/config/: params.yaml  rviz_config.rviz  waypoints.txt
src/mav_formation_control/launch/: formation_control.launch.py  formation_control_with_rviz.launch.py  rviz.launch.py
src/mav_formation_control/src/: follower_controller_node.cpp  formation_controller_node.cpp  virtual_leader_trajectory_node.cpp
