<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>formation_containment_control</name>
  <version>1.0.0</version>
  <description>
    Collision-Free Formation-Containment Control Based on Adaptive Sliding Mode Strategy
    for a Quadrotor Fleet Under Disturbances.
    
    Implementation of the control strategy from Katt &amp; Castañeda (2025):
    - Graph-based multi-agent interaction
    - Laplacian matrix computation and partitioning
    - Single-Gain Adaptive Sliding Mode Control (SGASMC)
    - Convex hull containment
    - Sensor-less collision avoidance
    
    Compatible with Bitcraze Crazyswarm2 framework.
  </description>
  <maintainer email="robotarium@example.com">Robotarium Team</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Python dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  
  <!-- ROS2 message dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Crazyswarm2 dependencies -->
  <exec_depend>crazyflie_interfaces</exec_depend>
  <exec_depend>motion_capture_tracking_interfaces</exec_depend>
  
  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

